--- a/SuperCollider/Help/SwingOSC/JSCView.html
+++ b/SuperCollider/Help/SwingOSC/JSCView.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<P>This class is meant as an emulation of SCView. last mod: 25-sep-07 sciss
+<P>This class is meant as an emulation of SCView. last mod: 25-nov-07 sciss
 </p>
 <table>
 <!-- <tr><td colspan="2" class="oscTabSection">no-op / not working</td></tr>
@@ -21,11 +21,13 @@
 <tr><td class="oscTabKey">mouseOverAction</td><td class="oscTabValue">on Mac OS X mouse-over can only be tracked when the window is activated.</td></tr>
 <tr><td class="oscTabKey">hasFocus</td><td class="oscTabValue">components report to be unfocussed when their window is not the active window</td></tr>
 <tr><td colspan="2" class="oscTabSection">extended functionality</td></tr>
-<tr><td class="oscTabKey">id method</td><td class="oscTabValue">returns the nodeID for the component. Since SCView contains an id_ method, this behaviour should be modified!</td></tr>
+<tr><td class="oscTabKey">id method</td><td class="oscTabValue">returns the nodeID for the component.<!-- Since SCView contains an id_ method, this behaviour should be modified! --></td></tr>
 <tr><td class="oscTabKey">mouseOverAction</td><td class="oscTabValue">key-modifer argument is passed</td></tr>
 <tr><td colspan="2" class="oscTabSection">known issues / todo</td></tr>
 <tr><td class="oscTabKey">findByID</td><td class="oscTabValue">not yet implemented</td></tr>
-<tr><td class="oscTabKey">id_</td><td class="oscTabValue">you should not change the id as it's currently identical to the nodeID on the server</td></tr>
+<tr><td class="oscTabKey">keyModifiersChangedAction_</td><td class="oscTabValue">not yet implemented</td></tr>
+<tr><td class="oscTabKey">focusColor_</td><td class="oscTabValue">not implemented (will not be implemented)</td></tr>
+<tr><td class="oscTabKey">id_</td><td class="oscTabValue">not implemented (will not be implemented)</td></tr>
 </table>
 </div>
 <P>&nbsp;</P>
