--- a/SuperCollider/Help/SwingOSC/JSC2DSlider.html
+++ b/SuperCollider/Help/SwingOSC/JSC2DSlider.html
@@ -9,19 +9,20 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SC2DSlider. last mod: 30-jul-07 sciss
+<p>This class is meant as an emulation of SC2DSlider. last mod: 25-nov-07 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
 <!-- <tr><td colspan="2" class="oscTabSection">no-op / not working</td></tr> -->
 <tr><td colspan="2" class="oscTabSection">different behaviour</td></tr>
 <tr><td class="oscTabKey">knob</td><td class="oscTabValue">slightly bigger (15x15 pixels vs. 12x12)</td></tr>
-<tr><td colspan="2" class="oscTabSection">extended functionality</td></tr>
-<tr><td class="oscTabKey">setXY(Active)</td><td class="oscTabValue">more efficient shortcut for setting both x and y [available for Cocoa GUI through extCocoaCompat.sc]</td></tr>
+<!-- <tr><td colspan="2" class="oscTabSection">extended functionality</td></tr> -->
+<!-- <tr><td class="oscTabKey">setXY(Active)</td><td class="oscTabValue">more efficient shortcut for setting both x and y [available for Cocoa GUI through extCocoaCompat.sc]</td></tr> -->
 <tr><td colspan="2" class="oscTabSection">known issues / todo</td></tr>
 <tr><td class="oscTabKey">focus border</td><td class="oscTabValue">(FIXED?) not adjusted when resizing the component</td></tr>
 </table>
 </div>
+<P>&nbsp;</P>
 <h1>JSC2DSlider</h1>
 <p><strong>
 Note: please use the abstraction layer GUI.slider2D if possible! (see <A HREF="SC://GUI">GUI</A>)
