--- a/SuperCollider/Help/SwingOSC/JSCNumberBox.html
+++ b/SuperCollider/Help/SwingOSC/JSCNumberBox.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCNumberBox. last mod: 30-jul-07 sciss
+<p>This class is meant as an emulation of SCNumberBox. last mod: 25-nov-07 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -23,7 +23,7 @@
 <tr><td class="oscTabKey">maxDecimals</td><td class="oscTabValue">adjust the maximum number of decimals that is displayed</td></tr>
 <tr><td colspan="2" class="oscTabSection">known issues / todo</td></tr>
 <tr><td class="oscTabKey">actions</td><td class="oscTabValue">pressing escape will not fire an action</td></tr>
-<tr><td class="oscTabKey">floating point errors</td><td class="oscTabValue">64bit &lt;=&gt; 32bit float conversion produces round off errors which cause for example supposed integer numbers to be displayed with a lot of zeros after the period and a few more characters (the round off error) at the end. to prevent this, use NetAddr.useDoubles_( true ) and SwingOSC.default.useDouble_( true ), or use the maxDecimals method (the latter is not compatible with cocoa GUI!)</tr>
+<!-- <tr><td class="oscTabKey">floating point errors</td><td class="oscTabValue">64bit &lt;=&gt; 32bit float conversion produces round off errors which cause for example supposed integer numbers to be displayed with a lot of zeros after the period and a few more characters (the round off error) at the end. to prevent this, use NetAddr.useDoubles_( true ) and SwingOSC.default.useDouble_( true ), or use the maxDecimals method (the latter is not compatible with cocoa GUI!)</tr> -->
 </table>
 </div>
 <P>&nbsp;</P>
