--- a/SuperCollider/Help/SwingOSC/JSCPopUpMenu.html
+++ b/SuperCollider/Help/SwingOSC/JSCPopUpMenu.html
@@ -25,6 +25,7 @@
 <tr><td class="oscTabKey">background</td><td class="oscTabValue">cannot be made transparent since it introduces drawing glitches in the menu (with apple's vm) - the background colour is used also for the menu. default background is therefore not Color.clear</tr>
 </table>
 </div>
+<P>&nbsp;</P>
 <h1>JSCPopUpMenu</h1>
 <p><strong>
 Note: please use the abstraction layer GUI.popUpMenu if possible! (see <A HREF="SC://GUI">GUI</A>)
