--- a/SuperCollider/Help/SwingOSC/JSCRangeSlider.html
+++ b/SuperCollider/Help/SwingOSC/JSCRangeSlider.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCRangeSlider. last mod: 30-jul-07 sciss
+<p>This class is meant as an emulation of SCRangeSlider. last mod: 25-nov-07 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -18,12 +18,13 @@
 <tr><td class="oscTabKey">knobColor</td><td class="oscTabValue">default is clear (grey) not blue</td></tr>
 <tr><td class="oscTabKey">keyboard modifiers</td><td class="oscTabValue">alt+click enforces resize ; shift+click extends resize nearest bar end</td></tr>
 <tr><td class="oscTabKey">preferred size</td><td class="oscTabValue">optimum height is 17px</td></tr>
-<tr><td colspan="2" class="oscTabSection">extended functionality</td></tr>
-<tr><td class="oscTabKey">setSpan(Active)</td><td class="oscTabValue">more efficient shortcut for setting both lo and hi [available for Cocoa GUI through extCocoaCompat.sc]</td></tr>
+<!-- <tr><td colspan="2" class="oscTabSection">extended functionality</td></tr> -->
+<!-- <tr><td class="oscTabKey">setSpan(Active)</td><td class="oscTabValue">more efficient shortcut for setting both lo and hi [available for Cocoa GUI through extCocoaCompat.sc]</td></tr> -->
 <tr><td colspan="2" class="oscTabSection">known issues / todo</td></tr>
 <tr><td class="oscTabKey">focus border</td><td class="oscTabValue">(FIXED?) not adjusted when resizing the component</td></tr>
 </table>
 </div>
+<P>&nbsp;</P>
 <h1>JSCRangeSlider</h1>
 <p><strong>
 Note: please use the abstraction layer GUI.rangeSlider if possible! (see <A HREF="SC://GUI">GUI</A>)
