--- a/SuperCollider/Help/SwingOSC/JSCSlider.html
+++ b/SuperCollider/Help/SwingOSC/JSCSlider.html
@@ -23,6 +23,7 @@
 <tr><td class="oscTabKey">knobColor_</td><td class="oscTabValue">has no effect since we use the default look-and-feel slider and not a custom one</td></tr>
 </table>
 </div>
+<P>&nbsp;</P>
 <h1>JSCSlider</h1>
 <p><strong>
 Note: please use the abstraction layer GUI.slider if possible! (see <A HREF="SC://GUI">GUI</A>)
