--- a/SuperCollider/Help/SwingOSC/JSCButton.html
+++ b/SuperCollider/Help/SwingOSC/JSCButton.html
@@ -21,6 +21,7 @@
 <!-- <tr><td colspan="2" class="oscTabSection">known issues / todo</td></tr> -->
 </table>
 </div>
+<P>&nbsp;</P>
 <h1>JSCButton</h1>
 <p><strong>
 Note: please use the abstraction layer GUI.button if possible! (see <A HREF="SC://GUI">GUI</A>)
