some cleanup. so help file conversion.

--- a/SuperCollider/Help/SwingOSC/JSCButton.html
+++ b/SuperCollider/Help/SwingOSC/JSCButton.html
@@ -9,7 +9,7 @@
 <body>
 <div class="osc">
 <h2>SwingOSC &ndash; Java-based GUI classes</h2>
-<p>This class is meant as an emulation of SCButton. last mod: 12-jan-07 sciss
+<p>This class is meant as an emulation of SCButton. last mod: 12-jan-08 sciss
 <br>Also refer to <A HREF="JSCView.html">JSCView</A> for different behaviour affecting all widgets
 </p>
 <table>
@@ -67,10 +67,10 @@ b.doAction;
 <span class="cm">// values are clipped to size of states</span>
 b.valueAction =  -1;
 
-<span class="cm">// floats are truncated to integer values (see also <A HREF="JFont.html">JFont</A>)</span>
+<span class="cm">// floats are truncated to integer values</span>
 b.valueAction =  3.3;
 
-<span class="cm">// you can change the font of the button text </span>
+<span class="cm">// you can change the font of the button text (see also <A HREF="JFont.html">JFont</A>)</span>
 b.font = <span class="cl">JFont</span>( <span class="st">"Serif"</span>, 20 );
 
 </pre>
