--- a/SuperCollider/Help/SwingOSC/SwingGUI.html
+++ b/SuperCollider/Help/SwingOSC/SwingGUI.html
@@ -9,92 +9,73 @@
 <body>
 <div class="osc">
 <h2>SwingGUI &ndash; Java-based GUI classes</h2>
-<p>This document lists most of the available classes. last mod: 17-dec-07 sciss
+<p>last mod: 13-Jan-08 sciss
 </p>
 </div>
 <h1>SwingGUI</h1>
 <P>
-SuperCollider Language on Mac OS comes with a large set of GUI classes that create windows and gadgets to control a synth, a performance or an application. Unlike the language itself and the server, these class are deeply connected to the Mac OS Cocoa API and have not been ported to other platforms. Alternative controls include SCUM and Emacs for Linux, and of course all OSC aware applications, like Max for example. However the crucial point is to have ready language classes to build GUIs. Here we have started to create classes very similar to the original SuperCollider Mac classes with the aim of being able to write almost usual syntax and run it on different platforms.
+This class provides access to all <A HREF="SwingOSC.html">SwingOSC</A> view classes. Upon startup it registers with the <A HREF="SC://GUI">GUI</A> factory, becoming available through <code><span class="cl">GUI</span>.swing</code> and <code><span class="cl">GUI</span>.get(&nbsp;<span class="sy">\swing</span>&nbsp;)</code>.
 </P>
-<p>See <A HREF="SC://GUI">GUI</A> <SPAN CLASS="bigred">!</SPAN> to learn about the preferred (kit-independant) way of building a GUI.</p>
-<p>See <A HREF="SwingOSC.html">SwingOSC</A> to learn how to boot a GUI server.</p>
-<h2>Translated Classes</h2>
-<P>
-&ndash; Most of the Mac OS only GUI elements have been converted, with some functionality still missing. To switch from Cocoa to Java GUI, you should use the <A HREF="SC://GUI">GUI</A> class if possible. You can also use SwingOSC classes directly, by using its replacement classes which have the same name but an additional initial J character (<SPAN CLASS="red">red</SPAN> indicates incomplete / buggy) :
-</P>
+<p>See <A HREF="SC://GUI">GUI</A> for more details.</p>
+<h2>Available Views</h2>
 <table>
-<tr><td><b>Cocoa</b></td><td><b>Java (SwingOSC)</b></td></tr>
-<tr><td><A HREF="SC://SCWindow">SCWindow</A></td><td><A HREF="JSCWindow.html">JSCWindow</A></td><td>a frame that can contain gadgets</td></tr>
-<tr><td><A HREF="SC://SCButton">SCButton</A></td><td><A HREF="JSCButton.html">JSCButton</A></td><td>a multiple state push button</td></tr>
-<tr><td><A HREF="SC://SCPopUpMenu">SCPopUpMenu</A></td><td><A HREF="JSCPopUpMenu.html">JSCPopUpMenu</A></td><td>a collapsed multiple choice button</td></tr>
-<tr><td><A HREF="SC://Font">Font</A></td><td><A HREF="JFont.html">JFont</A></td><td>a font typeface description</td></tr>
-<tr><td><A HREF="SC://SCSlider">SCSlider</A></td><td><A HREF="JSCSlider.html">JSCSlider</A></td><td>a horizontal or vertical slider</td></tr>
-<tr><td><A HREF="SC://SCRangeSlider">SCRangeSlider</A></td><td><A HREF="JSCRangeSlider.html">JSCRangeSlider</A></td><td>interval slider</td></tr>
-<tr><td><A HREF="SC://SC2DSlider">SC2DSlider</A></td><td><A HREF="JSC2DSlider.html">JSC2DSlider</A></td><td>horizontally and vertically moveable slider</td></tr>
-<tr><td><A HREF="SC://SCTextField">SCTextField</A></td><td><A HREF="JSCTextField.html">JSCTextField</A></td><td>an editable one line text field</td></tr>
-<tr><td><strong><A HREF="SC://EZSlider">EZSlider</A></strong></td><td><strong><A HREF="JEZSlider.html">JEZSlider</A></strong></td><td><strong>a combo of slider, numberbox and label</strong></td></tr>
-<tr><td><A HREF="SC://EZNumber">EZNumber</A></td><td><A HREF="JEZNumber.html">JEZNumber</A></td><td>a combo of numberbox and label</td></tr>
-<tr><td><A HREF="SC://SCListView">SCListView</A></td><td><A HREF="JSCListView.html">JSCListView</A></td><td>a list of text items</td></tr>
-<tr><td><A HREF="SC://SCStaticText">SCStaticText</A></td><td><A HREF="JSCStaticText.html">JSCStaticText</A></td><td>a text label</td></tr>
-<tr><td><A HREF="SC://SCNumberBox">SCNumberBox</A></td><td><A HREF="JSCNumberBox.html">JSCNumberBox</A></td><td>editable number field</td></tr>
-<tr><td><A HREF="SC://SCDragSource">SCDragSource</A></td><td><A HREF="JSCDragSource.html">JSCDragSource</A></td><td>object container acting as a source for drag-n-drop</td></tr>
-<tr><td><A HREF="SC://SCDragSink">SCDragSink</A></td><td><A HREF="JSCDragSink.html">JSCDragSink</A></td><td>object container acting as a target for drag-n-drop</td></tr>
-<tr><td><A HREF="SC://SCDragBoth">SCDragBoth</A></td><td><A HREF="JSCDragBoth.html">JSCDragBoth</A></td><td>combination of DragSource and DragSink</td></tr>
-<tr><td><A HREF="SC://Stethoscope">Stethoscope</A></td><td><A HREF="JStethoscope.html">JStethoscope</A></td><td>oscilloscope tool</td></tr>
-<tr><td><A HREF="SC://SCScope">SCScope</A></td><td><A HREF="JSCScope.html">JSCScope</A></td><td>oscilloscope view</td></tr>
-<tr><td><A HREF="SC://FreqScope">FreqScope</A></td><td><A HREF="JFreqScope.html">JFreqScope</A></td><td>spectrum tool</td></tr>
-<tr><td><A HREF="SC://SCFreqScope">SCFreqScope</A></td><td><A HREF="JSCFreqScope.html">JSCFreqScope</A></td><td>spectrum view</td></tr>
-<tr><td><A HREF="SC://SCUserView">SCUserView</A></td><td><A HREF="JSCUserView.html">JSCUserView</A></td><td>view with customizable graphics</td></tr>
-<tr><td><A HREF="SC://SCTabletView">SCTabletView</A></td><td><A HREF="JSCTabletView.html">JSCTabletView</A></td><td>view for graphic tablet control</td></tr>
-<tr><td><A HREF="SC://Pen">Pen</A></td><td><A HREF="JPen.html">JPen</A></td><td>tool to use with (J)SCUserView and (J)SCWindow</td></tr>
-<tr><td><A HREF="SC://SCTextView">SCTextView</A></td><td><A HREF="JSCTextView.html">JSCTextView</A></td><td>multiline attributed text editor</td></tr>
-<tr><td><A HREF="SC://SCHLayoutView">SCHLayoutView</A></td><td><A HREF="JSCHLayoutView.html">JSCHLayoutView</A></td><td>container with children placed horizontally</td></tr>
-<tr><td><A HREF="SC://SCVLayoutView">SCVLayoutView</A></td><td><A HREF="JSCVLayoutView.html">JSCVLayoutView</A></td><td>container with children placed vertically</td></tr>
-<tr><td><A HREF="SC://SCCompositeView">SCCompositeView</A></td><td><A HREF="JSCCompositeView.html">JSCCompositeView</A></td><td>generic container</td></tr>
-<tr><td><A HREF="SC://Knob">Knob</A></td><td><A HREF="JKnob.html">JKnob</A></td><td>user view that paints a knob / dial button</td></tr>
-<tr><td><A HREF="SC://CocoaDialog">CocoaDialog</A></td><td><A HREF="SwingDialog.html">SwingDialog</A></td><td>file selection dialog management</td></tr>
-<tr><td><A HREF="SC://SCMultiSliderView">SCMultiSliderView</A></td><td><A HREF="JSCMultiSliderView.html">JSCMultiSliderView</A></td><td>array of sliders</td></tr>
-<tr><td><A HREF="SC://SCEnvelopeView">SCEnvelopeView</A></td><td><A HREF="JSCEnvelopeView.html">JSCEnvelopeView</A></td><td>breakpoint function editor</td></tr>
-<tr><td><A HREF="SC://SCSoundFileView">SCSoundFileView</A></td><td><A HREF="JSCSoundFileView.html">JSCSoundFileView</A></td><td>audio file waveform display</td></tr>
-<tr><td><A HREF="SC://SCMovieView">SCMovieView</A></td><td><A HREF="JSCMovieView.html">JSCMovieView</A></td><td><SPAN CLASS="red">video and still image display</SPAN></td></tr>
-<tr><td><A HREF="SC://SCQuartzComposerView">SCQuartzComposerView</A></td><td>---N.A.---</td><td><SPAN CLASS="red">quartz composer bridge</SPAN></td></tr>
-<tr><td colspan="3">&nbsp;</td></tr>
-<tr><td></td><td><A HREF="JSCCheckBox.html">JSCCheckBox</A></td><td>checkmark toggle button</td></tr>
-<tr><td></td><td><A HREF="JSCTabbedPane.html">JSCTabbedPane</A></td><td>hosts multiple containers that can be switched through tabs</td></tr>
-<!-- <tr><td></td><td><A HREF="JSCScrollPane.html">JSCScrollPane</A></td><td><SPAN CLASS="red">wraps container in a virtual viewport with scrollbar navigation</SPAN></td></tr> -->
-<tr><td></td><td><A HREF="JSCScrollBar.html">JSCScrollBar</A></td><td>slider to navigate virtual viewports</td></tr>
-<tr><td></td><td><A HREF="JSCPeakMeterView.html">JSCPeakMeterView</A></td><td>volume level peak meter display</td></tr>
+<tr><td><b>View Class</b></td><td><b>Description</b></td></tr>
+<tr><td><A HREF="JSCWindow.html">JSCWindow</A></td><td>a frame that can contain gadgets</td></tr>
+<tr><td><A HREF="JSCButton.html">JSCButton</A></td><td>a multiple state push button</td></tr>
+<tr><td><A HREF="JSCPopUpMenu.html">JSCPopUpMenu</A></td><td>a collapsed multiple choice button</td></tr>
+<tr><td><A HREF="JFont.html">JFont</A></td><td>a font typeface description</td></tr>
+<tr><td><A HREF="JSCSlider.html">JSCSlider</A></td><td>a horizontal or vertical slider</td></tr>
+<tr><td><A HREF="JSCRangeSlider.html">JSCRangeSlider</A></td><td>interval slider</td></tr>
+<tr><td><A HREF="JSC2DSlider.html">JSC2DSlider</A></td><td>horizontally and vertically moveable slider</td></tr>
+<tr><td><A HREF="JSCTextField.html">JSCTextField</A></td><td>an editable one line text field</td></tr>
+<tr><td><strong><A HREF="JEZSlider.html">JEZSlider</A></strong></td><td><strong>a combo of slider, numberbox and label</strong></td></tr>
+<tr><td><A HREF="JEZNumber.html">JEZNumber</A></td><td>a combo of numberbox and label</td></tr>
+<tr><td><A HREF="JSCListView.html">JSCListView</A></td><td>a list of text items</td></tr>
+<tr><td><A HREF="JSCStaticText.html">JSCStaticText</A></td><td>a text label</td></tr>
+<tr><td><A HREF="JSCNumberBox.html">JSCNumberBox</A></td><td>editable number field</td></tr>
+<tr><td><A HREF="JSCDragSource.html">JSCDragSource</A></td><td>object container acting as a source for drag-n-drop</td></tr>
+<tr><td><A HREF="JSCDragSink.html">JSCDragSink</A></td><td>object container acting as a target for drag-n-drop</td></tr>
+<tr><td><A HREF="JSCDragBoth.html">JSCDragBoth</A></td><td>combination of DragSource and DragSink</td></tr>
+<tr><td><A HREF="JStethoscope.html">JStethoscope</A></td><td>oscilloscope tool</td></tr>
+<tr><td><A HREF="JSCScope.html">JSCScope</A></td><td>oscilloscope view</td></tr>
+<tr><td><A HREF="JFreqScope.html">JFreqScope</A></td><td>spectrum tool</td></tr>
+<tr><td><A HREF="JSCFreqScope.html">JSCFreqScope</A></td><td>spectrum view</td></tr>
+<tr><td><A HREF="JSCUserView.html">JSCUserView</A></td><td>view with customizable graphics</td></tr>
+<tr><td><A HREF="JSCTabletView.html">JSCTabletView</A></td><td>view for graphic tablet control</td></tr>
+<tr><td><A HREF="JPen.html">JPen</A></td><td>tool to use with JSCUserView and JSCWindow</td></tr>
+<tr><td><A HREF="JSCTextView.html">JSCTextView</A></td><td>multiline attributed text editor</td></tr>
+<tr><td><A HREF="JSCHLayoutView.html">JSCHLayoutView</A></td><td>container with children placed horizontally</td></tr>
+<tr><td><A HREF="JSCVLayoutView.html">JSCVLayoutView</A></td><td>container with children placed vertically</td></tr>
+<tr><td><A HREF="JSCCompositeView.html">JSCCompositeView</A></td><td>generic container</td></tr>
+<tr><td><A HREF="JKnob.html">JKnob</A></td><td>user view that paints a knob / dial button</td></tr>
+<tr><td><A HREF="SwingDialog.html">SwingDialog</A></td><td>file selection dialog management</td></tr>
+<tr><td><A HREF="JSCMultiSliderView.html">JSCMultiSliderView</A></td><td>array of sliders</td></tr>
+<tr><td><A HREF="JSCEnvelopeView.html">JSCEnvelopeView</A></td><td>breakpoint function editor</td></tr>
+<tr><td><A HREF="JSCSoundFileView.html">JSCSoundFileView</A></td><td>audio file waveform display</td></tr>
+<tr><td><A HREF="JSCMovieView.html">JSCMovieView</A></td><td>video and still image display</td></tr>
+<tr><td><A HREF="JSCCheckBox.html">JSCCheckBox</A></td><td>checkmark toggle button</td></tr>
+<tr><td><A HREF="JSCTabbedPane.html">JSCTabbedPane</A></td><td>hosts multiple containers that can be switched through tabs</td></tr>
+<tr><td><A HREF="JSCScrollBar.html">JSCScrollBar</A></td><td>slider to navigate virtual viewports</td></tr>
+<tr><td><A HREF="JSCPeakMeterView.html">JSCPeakMeterView</A></td><td>volume level peak meter display</td></tr>
 </table>
-<P>&nbsp;<BR>
-Click above to open the help files and compare the output; a good starting point is (J)EZSlider (<strong>highlighted</strong>). For SwingOSC, you need to copy the help files into the SuperCollider help folder first.
-</P>
-<h2>Universal Classes</h2>
-<P>
-&ndash; Some original classes work in both contexts : <A HREF="SC://Color">Color</A>, <A HREF="SC://FlowLayout">FlowLayout</A>, <A HREF="SC://Gradient">Gradient</A>
-</P>
+<P><br>A good starting point for learning about the views is <A HREF="JEZSlider.html">JEZSlider</A> (<strong>hightlighted</strong>).
+<P>&nbsp;</P>
 <h2>UGen Replacements</h2>
 <P>
-&ndash; There are replacements for the Mac-only Mouse UGens:
+There are replacements for the Mac-only Mouse UGens:
 </P>
 <table>
-<tr><td><b>Cocoa</b></td><td><b>Java (SwingOSC)</b></td></tr>
-<tr><td><A HREF="SC://MouseX">MouseX</A></td><td><A HREF="JMouseX.html">JMouseX</A></td><td>track horizontal mouse position</td></tr>
-<tr><td><A HREF="SC://MouseY">MouseY</A></td><td><A HREF="JMouseY.html">JMouseY</A></td><td>track vertical mouse position</td></tr>
-<tr><td><A HREF="SC://MouseButton">MouseButton</A></td><td><A HREF="JMouseButton.html">JMouseButton</A></td><td>track mouse button pressing</td></tr>
-<tr><td><A HREF="SC://KeyState">KeyState</A></td><td><A HREF="JKeyState.html">JKeyState</A></td><td>track keyboard typing</td></tr>
+<tr><td><b>UGen Class</b></td><td><b>Description</b></td></tr>
+<tr><td><A HREF="JMouseX.html">JMouseX</A></td><td>track horizontal mouse position</td></tr>
+<tr><td><A HREF="JMouseY.html">JMouseY</A></td><td>track vertical mouse position</td></tr>
+<tr><td><A HREF="JMouseButton.html">JMouseButton</A></td><td>track mouse button pressing</td></tr>
+<tr><td><A HREF="JKeyState.html">JKeyState</A></td><td>track keyboard typing</td></tr>
 </table>
 <P>&nbsp;</P>
 <h2>Other Platform Specific Classes</h2>
 <table>
-<tr><td><b>Cocoa</b></td><td><b>Java (SwingOSC)</b></td></tr>
-<tr><td><A HREF="SC://Speech">Speech</A></td><td><A HREF="JSpeech.html">JSpeech</A></td><td><SPAN CLASS="red">text-to-speech synthesizer</SPAN></td></tr>
+<tr><td><b>Class</b></td><td><b>Description</b></td></tr>
+<tr><td><A HREF="JSpeech.html">JSpeech</A></td><td>text-to-speech synthesizer</td></tr>
 </table>
-<P>&nbsp;</P>
-<h2>Missing Classes</h2>
-<P>
-&ndash; These are only available in Cocoa at the moment, but should some day be available in SwingOSC: <A HREF="SC://SC2DTabletSlider">SC2DTabletSlider</A>.
-</P><P>
-&ndash; These are likely to never make it into SwingOSC: <A HREF="SC://HiliteGradient">HiliteGradient</A> (as background colour)
-</P>
 </body>
 </html>
