--- a/SuperCollider/Help/SwingOSC/JSCScrollTopView.html
+++ b/SuperCollider/Help/SwingOSC/JSCScrollTopView.html
@@ -10,31 +10,38 @@
 p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
 p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
 p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco; min-height: 12.0px}
-p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #4d62a3}
-p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #4d62a3; min-height: 14.0px}
+p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #53649d}
+p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; color: #53649d; min-height: 14.0px}
 p.p6 {margin: 0.0px 0.0px 0.0px 0.0px; font: 14.0px Helvetica}
 p.p7 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 14.0px Helvetica}
 p.p8 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 12.0px Helvetica; min-height: 14.0px}
 p.p9 {margin: 0.0px 0.0px 0.0px 57.0px; text-indent: -57.0px; font: 12.0px Helvetica}
 p.p10 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco}
-p.p11 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #ad1d13}
-p.p12 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; min-height: 14.0px}
-p.p13 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #653f2e}
-p.p14 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #902f20}
-p.p15 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #902f20; min-height: 14.0px}
+p.p11 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; min-height: 14.0px}
+p.p12 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #902f20}
+p.p13 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #5b4132}
+p.p14 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #000000; min-height: 14.0px}
+p.p15 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #000000}
+p.p16 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #007300}
+p.p17 {margin: 0.0px 0.0px 0.0px 0.0px; font: 9.0px Monaco}
+p.p18 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #7a3827}
+p.p19 {margin: 0.0px 0.0px 0.0px 0.0px; font: 10.0px Monaco; color: #7a3827; min-height: 14.0px}
 span.s1 {font: 18.0px Helvetica}
 span.s2 {color: #000000}
-span.s3 {text-decoration: underline ; color: #475a96}
-span.s4 {color: #4d619f}
-span.s5 {color: #4d62a3}
-span.s6 {font: 10.0px Monaco; color: #23429c}
-span.s7 {color: #4b61a8}
-span.s8 {color: #4963b0}
-span.s9 {color: #4565c0}
-span.s10 {color: #0019ba}
-span.s11 {color: #23429c}
-span.s12 {color: #653f2e}
-span.s13 {color: #062cb0}
+span.s3 {text-decoration: underline ; color: #4c5c91}
+span.s4 {color: #53639a}
+span.s5 {color: #53649d}
+span.s6 {font: 10.0px Monaco; color: #2c4796}
+span.s7 {color: #5165a2}
+span.s8 {color: #5167aa}
+span.s9 {color: #4e69b8}
+span.s10 {color: #062cb0}
+span.s11 {color: #2c4796}
+span.s12 {color: #5b4132}
+span.s13 {color: #0000bf}
+span.s14 {color: #007300}
+span.s15 {color: #606060}
+span.s16 {color: #1337a8}
 span.Apple-tab-span {white-space:pre}
 </style>
 </head>
@@ -91,66 +98,105 @@ span.Apple-tab-span {white-space:pre}
 <p class="p2"><br></p>
 <p class="p7"><b>Examples</b></p>
 <p class="p3"><br></p>
+<p class="p10">g.reboot;</p>
+<p class="p10">g.dumpOSC(1);</p>
+<p class="p11"><br></p>
 <p class="p10">(</p>
-<p class="p11"><span class="s2">w = </span><span class="s10">JSCWindow</span><span class="s2">( scroll: </span><span class="s10">true</span><span class="s2"> ); </span>// you must set this when the window is created</p>
+<p class="p12"><span class="s2">w = </span><span class="s10">JSCWindow</span><span class="s2">( scroll: </span><span class="s10">true</span><span class="s2"> ); </span>// you must set this when the window is created</p>
 <p class="p10">c = <span class="s10">JSCSlider</span>( w, <span class="s10">Rect</span>( 0, 0, 100, 30 ));</p>
 <p class="p10">w.front;</p>
 <p class="p10">)</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p13"><span class="s2">c.resize = 2; </span>// resize settings are ignored if scrolling is enabled.</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
+<p class="p13">g.sendMsg( '/method', w.view.id, \invalidate );</p>
 <p class="p10">d = <span class="s11">JSCSlider</span>( w, <span class="s11">Rect</span>( 1500, 40, 100, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
+<p class="p14"><br></p>
+<p class="p10">d.remove;</p>
+<p class="p14"><br></p>
+<p class="p15">x = <span class="s13">JavaObject</span>.basicNew( w.view.id, w.view.server );</p>
+<p class="p10">x.validate;</p>
+<p class="p10">x.revalidate;</p>
+<p class="p14"><br></p>
+<p class="p14"><br></p>
+<p class="p14"><br></p>
+<p class="p10">g.sendMsg( <span class="s14">'/method'</span>, <span class="s15">"vp"</span> ++ w.view.id, <span class="s14">\revalidate</span> );</p>
+<p class="p14"><br></p>
+<p class="p15">y = <span class="s13">JavaObject</span>.newFrom( x, <span class="s14">\getParent</span> );</p>
+<p class="p15">x.validate;</p>
+<p class="p15">y.validate;</p>
+<p class="p15">x.repaint;</p>
+<p class="p10">y.repaint;</p>
+<p class="p14"><br></p>
+<p class="p15">g.sendMsg( '/print', y.id );</p>
+<p class="p15">g.sendMsg( <span class="s14">'/print'</span>, w.view.id );</p>
+<p class="p15">g.sendMsg( <span class="s14">'/method'</span>, w.view.id, <span class="s14">\validate</span> );</p>
+<p class="p15">g.sendMsg( <span class="s14">'/method'</span>, w.view.id, <span class="s14">\revalidate</span> );</p>
+<p class="p15">g.sendMsg( <span class="s14">'/method'</span>, w.view.id, <span class="s14">\repaint</span> );</p>
+<p class="p15">g.sendMsg( <span class="s14">'/method'</span>, <span class="s15">"vp"</span> ++ w.view.id, <span class="s14">\repaint</span> );</p>
+<p class="p15">g.sendMsg( <span class="s14">'/method'</span>, <span class="s15">"vp"</span> ++ w.view.id, <span class="s14">\validate</span> );</p>
+<p class="p16"><span class="s2">g.sendMsg( </span>'/local'<span class="s2">, </span>\test<span class="s2">, </span>'['<span class="s2">, </span>'/method'<span class="s2">, </span><span class="s15">"vp"</span><span class="s2"> ++ w.view.id, </span>\getPreferredSize<span class="s2">, </span>']'<span class="s2"> );</span></p>
+<p class="p15">g.sendMsg( <span class="s14">'/print'</span>, <span class="s14">\test</span> );</p>
 <p class="p10">e = <span class="s11">JSCRangeSlider</span>( w, <span class="s11">Rect</span>( 1500, 80, 100, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
 <p class="p13">e.bounds</p>
 <p class="p10">d.bounds</p>
+<p class="p10">c.bounds = c.bounds.insetAll( 0, 0, -200, 0 );</p>
+<p class="p11"><br></p>
 <p class="p13"><span class="s2">e = </span><span class="s11">JSCRangeSlider</span><span class="s2">( w, </span><span class="s11">Rect</span><span class="s2">( 0, 0, 100, 30 )); </span>// a horizontal scroller appears</p>
 <p class="p10">e.bounds</p>
 <p class="p10">e.opaque=true</p>
-<p class="p13"><span class="s2">f = </span><span class="s11">JSCRangeSlider</span><span class="s2">( w, </span><span class="s11">Rect</span><span class="s2">( 4, 40, 100, 30 )); </span>// a horizontal scroller appears</p>
+<p class="p13"><span class="s2">f = </span><span class="s11">JSCRangeSlider</span><span class="s2">( w, </span><span class="s11">Rect</span><span class="s2">( 4, 40, 100, 530 )); </span>// a horizontal scroller appears</p>
+<p class="p13">g.dumpOSC(1,1); g.stopAliveThread;</p>
+<p class="p13">g.dumpOSC(0,0);</p>
 <p class="p10">f.bounds</p>
 <p class="p10">f.refresh</p>
 <p class="p10">w.view.resize=5</p>
 <p class="p10">e.resize=5</p>
 <p class="p10">w.view.refresh</p>
-<p class="p12"><br></p>
-<p class="p14">// doesn't work</p>
-<p class="p14">// w.drawHook = { JPen.fillRect( Rect( 10, 10, 100, 100 ))};</p>
-<p class="p15"><br></p>
-<p class="p14">// w.view.background = Color.clear;</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
+<p class="p17">w.view.action = { arg ... args; args.postln };</p>
+<p class="p17">w.view.visibleOrigin;</p>
+<p class="p17">c.bounds;</p>
+<p class="p17">w.view.innerBounds;</p>
+<p class="p11"><br></p>
+<p class="p18">// doesn't work</p>
+<p class="p18">// w.drawHook = { JPen.fillRect( Rect( 10, 10, 100, 100 ))};</p>
+<p class="p19"><br></p>
+<p class="p18">// w.view.background = Color.clear;</p>
+<p class="p11"><br></p>
 <p class="p10">i = <span class="s11">JSCUserView</span>( w, <span class="s11">Rect</span>( 120, 160, 200, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
-<p class="p10">i.drawFunc = { <span class="s13">arg</span> v; <span class="s13">JPen</span>.fillRect( v.bounds )};</p>
+<p class="p10">i.drawFunc = { <span class="s16">arg</span> v; <span class="s16">JPen</span>.fillRect( v.bounds )};</p>
 <p class="p10">i.mouseDownAction_({ arg ... args; args.postln });</p>
 <p class="p10">i.resize = 5;</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p10">d = <span class="s11">JSCStaticText</span>( w, <span class="s11">Rect</span>( 4, 4, 100, 30 )).string_( "Schoko" );</p>
 <p class="p13"><span class="s2">e = </span><span class="s11">JSCRangeSlider</span><span class="s2">( w, </span><span class="s11">Rect</span><span class="s2">( 4, 40, 100, 30 )); </span>// a horizontal scroller appears</p>
 <p class="p13">e.resize = 5;</p>
-<p class="p10">e.background_( Color.green );</p>
-<p class="p10">e.background_( Color.clear );</p>
-<p class="p14">//w.view.opaque=false;</p>
-<p class="p14">//w.view.opaque=true;</p>
+<p class="p10">w.view.background_( Color.green );</p>
+<p class="p10">e.background_( Color.red );</p>
+<p class="p18">//w.view.opaque=false;</p>
+<p class="p18">//w.view.opaque=true;</p>
 <p class="p10">e.bounds;</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p13"><span class="s2">f = </span><span class="s11">JSCRangeSlider</span><span class="s2">( w, </span><span class="s11">Rect</span><span class="s2">( 40, 80, 100, 30 )); </span>// a horizontal scroller appears</p>
 <p class="p10">f.background_( Color.clear );</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p13"><span class="s2">h = </span><span class="s11">JSCRangeSlider</span><span class="s2">( w, </span><span class="s11">Rect</span><span class="s2">( 80, 120, 200, 30 )); </span>// a horizontal scroller appears</p>
 <p class="p10">h.background_( Color.clear );</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p10">g.dumpOSC</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p10">i = <span class="s11">JSCRangeSlider</span>( w, <span class="s11">Rect</span>( 120, 160, 200, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
 <p class="p10">i.background_( Color.clear );</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p10">j = <span class="s11">JSCRangeSlider</span>( w, <span class="s11">Rect</span>( 160, 200, 200, 30 )); <span class="s12">// a horizontal scroller appears</span></p>
 <p class="p10">j.background_( Color.clear );</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p10">g.sendMsg( '/method', 1001, \repaint );</p>
 <p class="p10">g.sendMsg( '/method', 1007, \invalidate );</p>
 <p class="p10">g.sendMsg( '/method', 1007, \validate );</p>
 <p class="p10">g.sendMsg( '/method', 1001, \revalidate );</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p10">n = JavaObject.basicNew( w.id, w.server );</p>
 <p class="p10">r = JavaObject.newFrom( n, \getRootPane );</p>
 <p class="p10">r.revalidate;</p>
@@ -158,29 +204,29 @@ span.Apple-tab-span {white-space:pre}
 <p class="p10">d = JavaObject.newFrom( c, \getComponent, 0 );</p>
 <p class="p10">d = JavaObject.newFrom( c, \getComponent, 1 );</p>
 <p class="p10">g.sendMsg( '/print', d.id );</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p10">e = JavaObject.newFrom( d, \getComponent, 0 );</p>
 <p class="p10">g.sendMsg( '/print', e.id );</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p10">g.sendMsg( '/method', 1000, \revalidate );</p>
 <p class="p10">g.sendMsg( '/method', 1014, \invalidate );</p>
 <p class="p10">g.sendMsg( '/method', 1014, \revalidate );</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p10">j.remove</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p10">w.view.bounds;</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p13"><span class="s2">w.view.autohidesScrollers<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= </span><span class="s11">false</span><span class="s2">; </span>// autohide is enabled by default, but we can turn it off</p>
 <p class="p10">w.view.hasHorizontalScroller<span class="Apple-tab-span">	</span>= <span class="s11">false</span>; <span class="s12">// hide the horizontal scroller</span></p>
 <p class="p10">w.view.autohidesScrollers<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= <span class="s11">true</span>;</p>
 <p class="p10">w.view.hasHorizontalScroller<span class="Apple-tab-span">	</span>= <span class="s11">true</span>;</p>
 <p class="p13"><span class="s2">w.view.visibleOrigin<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= 1200 @ 0; </span>// but we can still scroll using the visibleOrigin method</p>
 <p class="p13"><span class="s2">w.view.visibleOrigin<span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>= 0 @ 0; </span>// but we can still scroll using the visibleOrigin method</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p13">////////////// PROBLEMS</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p1">(FIXED?) view's returned bounds should (?) ignore the viewport's location</p>
-<p class="p12"><br></p>
+<p class="p11"><br></p>
 <p class="p10">w.view.background = <span class="s11">Color</span>.red;</p>
 </body>
 </html>
